--- a/Baikiemtra.html
+++ b/Baikiemtra.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>x
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <title>Người là lắng bên đời</title>
@@ -6,22 +6,24 @@
 <body>
     <div>
         <table border="1">
-            <caption>THÔNG TIN SINH VIÊN</caption>
+            <caption><h1>THÔNG TIN SINH VIÊN</h1></caption>
             <tbody>
                 <tr>
                     <th align="right">Họ và tên</th>
                     <td>Trần Duy Phong</td>
+                    <th>Avatar</th>
                 </tr>
                 <tr>
                     <th align="right">Ngày sinh</th>
                     <td>23/12/2004</td>
+                    <td rowspan="10"><img src="/images/Screenshot 2024-08-17 012512.png"></td>
                 </tr>
                 <tr>
                     <th align="right">Giới tính</th>
                     <td>Nam</td>
                 </tr>
                 <tr>
-                    <th align="right">Lớp</th>
+                    <th align="right">Tên lớp</th>
                     <td>DCCTCT67_05A</td>
                 </tr>
                 <tr>
@@ -51,9 +53,9 @@
                     </th>
                 </tr>
                 <tr>
-                    <td colspan="2">
+                    <td colspan="2" align="center">
                         <font color="red">
-                            <i><u><small><center>Ghi chú: Sinh viên điền thông tin thật của mình</center></small></u></i>
+                            Sinh viên: điền đầy đủ thông tin thật của mình
                         </font>
                     </td>
                 </tr>
